k8s/ingress/order-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: ecommerce
  annotations:
    # 인터넷에서 접근 가능한 Public ALB 생성
    alb.ingress.kubernetes.io/scheme: internet-facing

    # ALB가 Node가 아닌 Order API Pod IP로 직접 전달
    alb.ingress.kubernetes.io/target-type: ip

    # HTTP 80 포트 사용
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

    # ALB Target Group 상태 확인 경로
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/success-codes: "200"

spec:
  # AWS Load Balancer Controller가 처리할 Ingress
  ingressClassName: alb

  rules:
    - http:
        paths:
          # 주문 API
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: order-api-service
                port:
                  number: 80

          # 상태 확인 API
          - path: /health
            pathType: Exact
            backend:
              service:
                name: order-api-service
                port:
                  number: 80
